<?xml version="1.0" encoding="utf-8"?>

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/frameLayout1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <RelativeLayout
            android:id="@+id/relativeLayout1"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="left">

			<ImageView
			    android:id="@+id/imageView1"
			    android:layout_width="match_parent"
			    android:layout_height="match_parent"
			    android:layout_weight="0.96"
			    android:scaleType="fitXY"
			    android:src="@drawable/menu_bg_wood" />

			<TextView
			    android:id="@+id/textView1"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_alignParentTop="true"
			    android:layout_centerHorizontal="true"
			    android:layout_marginTop="10dp"
			    android:shadowColor="#333333"
			    android:shadowRadius="2.0"
			    android:text="@string/credits"
			    android:textColor="#ffffff"
			    android:textSize="30sp"
			    android:textStyle="bold"
			    android:typeface="sans" />

        </RelativeLayout>
        
        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/relativeLayout2"
            android:layout_width="fill_parent"
            android:layout_height="370dp"
            android:layout_gravity="bottom" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_weight="0.96"
                android:scaleType="fitXY"
                android:src="@drawable/surface" />

            <TextView
                android:id="@+id/credit1Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="38dp"
                android:text="@string/credit1"
                android:textColor="#ffffff"
                android:textSize="18sp"
                android:textStyle="bold"
                android:typeface="sans" />

            <TextView
                android:id="@+id/credit2Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/credit1Label"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:text="@string/credit2"
                android:textColor="#ffffff"
                android:textSize="18sp"
                android:textStyle="bold"
                android:typeface="sans" />

            <Button
                android:id="@+id/button1"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="32dp"
                android:onClick="backToMenu"
                android:text="@string/back" />

            <TextView
                android:id="@+id/credit3Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/credit2Label"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="70dp"
                android:text="@string/credit3"
                android:textColor="#ffffff"
                android:textSize="14sp"
                android:textStyle="bold"
                android:typeface="sans" />

        </RelativeLayout>

    </FrameLayout>    
    