<?xml version="1.0" encoding="utf-8"?>

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/frameLayout1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <RelativeLayout
            android:id="@+id/relativeLayout1"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="left">

			<ImageView
			    android:id="@+id/imageView1"
			    android:layout_width="match_parent"
			    android:layout_height="match_parent"
			    android:layout_weight="0.96"
			    android:scaleType="fitXY"
			    android:src="@drawable/menu_bg_wood" />

			<TextView
			    android:id="@+id/textView1"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_alignParentTop="true"
			    android:layout_centerHorizontal="true"
			    android:layout_marginTop="10dp"
			    android:shadowColor="#333333"
			    android:shadowRadius="2.0"
			    android:text="@string/welcome"
			    android:textColor="#ffffff"
			    android:textSize="30sp"
			    android:textStyle="bold"
			    android:typeface="sans" />

        </RelativeLayout>
        
        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/relativeLayout2"
            android:layout_width="fill_parent"
            android:layout_height="370dp"
            android:layout_gravity="bottom" >
        
        	<ImageView
            	android:id="@+id/imageView1"
            	android:layout_width="match_parent"
            	android:layout_height="fill_parent"
            	android:layout_weight="0.96"
            	android:scaleType="fitXY"
            	android:src="@drawable/surface" />

        	<!--<Spinner
        	    android:id="@+id/spinner1"
        	    android:layout_width="wrap_content"
        	    android:layout_height="wrap_content"
        	    android:layout_alignParentTop="true"
        	    android:layout_alignRight="@+id/imageView1"
        	    android:layout_marginRight="15dp"
        	    android:layout_marginTop="40dp"
        	    android:layout_toRightOf="@+id/textView2" />-->

        	<TextView
        	    android:id="@+id/textView2"
        	    android:layout_width="wrap_content"
        	    android:layout_height="wrap_content"
        	    android:layout_alignParentTop="true"
        	    android:layout_centerHorizontal="true"
        	    android:layout_marginTop="49dp"
        	    android:text="@string/choose"
        	    android:textColor="#ffffff"
        	    android:textSize="15sp"
        	    android:textStyle="bold"
        	    android:typeface="sans" />

        	<LinearLayout
        	    android:id="@+id/linearLayout1"
        	    android:layout_width="wrap_content"
        	    android:layout_height="wrap_content"
        	    android:layout_alignParentLeft="true"
        	    android:layout_alignParentRight="true"
        	    android:layout_below="@+id/textView2"
        	    android:layout_marginTop="25dp"
        	    android:orientation="vertical" >

				<RadioGroup
      				android:layout_width="fill_parent"
      				android:layout_height="wrap_content"
      				android:orientation="horizontal">

					<RadioButton
					    android:id="@+id/radio_60"
					    android:layout_width="wrap_content"
					    android:layout_height="wrap_content"
					    android:layout_marginLeft="25dp"
					    android:text="@string/s60"
      					android:onClick="seconds60" />

					<RadioButton
					    android:id="@+id/radio_120"
					    android:layout_width="wrap_content"
					    android:layout_height="wrap_content"
					    android:layout_marginLeft="30dp"
					    android:onClick="seconds120"
					    android:text="@string/s120" />

    			</RadioGroup>




        	</LinearLayout>

        	<Button
        	    android:id="@+id/button1"
        	    android:layout_width="200dp"
        	    android:layout_height="wrap_content"
        	    android:layout_alignParentBottom="true"
        	    android:layout_centerHorizontal="true"
        	    android:layout_marginBottom="114dp"
        	    android:onClick="launchGame"
        	    android:text="@string/start" />

	    </RelativeLayout>

    </FrameLayout>    
    