<?xml version="1.0" encoding="utf-8"?>

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/frameLayout1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >
        
        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/relativeLayout2"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="bottom" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_weight="0.96"
                android:scaleType="fitXY"
                android:src="@drawable/surface" />

            <!--
                <Spinner
        	    android:id="@+id/spinner1"
        	    android:layout_width="wrap_content"
        	    android:layout_height="wrap_content"
        	    android:layout_alignParentTop="true"
        	    android:layout_alignRight="@+id/imageView1"
        	    android:layout_marginRight="15dp"
        	    android:layout_marginTop="40dp"
        	    android:layout_toRightOf="@+id/textView2" />
            -->

            <TextView
                android:id="@+id/motoLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/logoImg"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="26dp"
                android:text="@string/moto"
                android:textColor="#ffffff"
                android:textSize="15sp"
                android:textStyle="bold"
                android:typeface="sans" />

            <ImageView
                android:id="@+id/logoImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="13dp"
                android:src="@drawable/logo" />

            <Button
                android:id="@+id/startGame"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/motoLabel"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="48dp"
                android:onClick="callTimeScreen"
                android:text="@string/startG" />

            <Button
                android:id="@+id/creditsButton"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/startGame"
                android:layout_below="@+id/startGame"
                android:layout_marginTop="16dp"
                android:onClick="callCreditsScreen"
                android:text="@string/credits" />

        </RelativeLayout>

    </FrameLayout>    
    